age calculator done and gitignore added

--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -61,7 +61,7 @@
                     alt="Thank you"
                 />
                 <span>
-                    You selected <span id="selected-rating">4</span> out of 5
+                    You selected <span id="selected-rating">-</span> out of 5
                 </span>
                 <h1>Thank you!</h1>
                 <p>
